fixing horizontal scroll bug

--- a/_/css/structure.scss
+++ b/_/css/structure.scss
@@ -27,7 +27,7 @@ $vertMARGIN: fib(11);
 	@include parallaxContainer();
 	// perspective-origin: center center;
 	overflow-y: scroll;
-	overflow-x: visible; // does this do anything?
+	overflow-x: hidden;
 	margin: (-$vertMARGIN) (-$horzMARGIN);
 	padding: ($vertMARGIN - $horzMARGIN)  0;
 	@include fixed(0);
